--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ws test server</title>
     <script src="./socket.io.min.js"></script>
+    <script src="./protobuf.min.js"></script>
+    <script src="./codec.js"></script>
   </head>
-
   <body>
     <div style="display: flex; flex-direction: column; align-items: center">
       <div style="width: 50%">
@@ -33,77 +34,6 @@
         <ul id="message-list"></ul>
       </div>
     </div>
-    <script>
-      // doms
-      const $sectionOffline = document.getElementById("section-offline");
-      const $sectionOnline = document.getElementById("section-online");
-      const $connectBtn = document.getElementById("connect-btn");
-      const $disconnectBtn = document.getElementById("disconnect-btn");
-      const $messageInput = document.getElementById("message");
-      const $sendBtn = document.getElementById("send-btn");
-      const $messageList = document.getElementById("message-list");
-
-      function toggleOnlineStatus(isOnline) {
-        $sectionOffline.hidden = isOnline;
-        $sectionOnline.hidden = !isOnline;
-      }
-
-      function appendMessage(message) {
-        const $li = document.createElement("li");
-        $li.innerText = message;
-        $messageList.appendChild($li);
-      }
-
-      // socket
-      let socket = io({
-        autoConnect: false,
-      });
-
-      // global status
-      let isConnecting = false;
-      let isConnected = false;
-
-      toggleOnlineStatus(isConnected);
-
-      // bind events
-      $connectBtn.addEventListener("click", (e) => {
-        if (isConnecting || isConnected) {
-          return;
-        }
-        isConnecting = true;
-        socket.connect();
-      });
-
-      // bind events
-      $disconnectBtn.addEventListener("click", (e) => {
-        if (!isConnected) {
-          return;
-        }
-        socket.disconnect();
-      });
-
-      // bind events
-      $sendBtn.addEventListener("click", (e) => {
-        socket.emit("msg", $messageInput.value);
-        $messageInput.value = "";
-      });
-
-      socket.on("connect", () => {
-        appendMessage(`connect: ${socket.id}`);
-        isConnecting = false;
-        isConnected = true;
-        toggleOnlineStatus(isConnected);
-      });
-
-      socket.on("disconnect", () => {
-        appendMessage(`disconnect: ${socket.id}`);
-        isConnected = false;
-        toggleOnlineStatus(isConnected);
-      });
-
-      socket.on("msg", (data) => {
-        appendMessage(`msg: ${data}`);
-      });
-    </script>
+    <script src="./main.js"></script>
   </body>
 </html>
